update flask deployment

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jernihin</title>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css"> 
-    <link rel="stylesheet" href="css/jernihin.css"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
+    <link rel="stylesheet" href="./static/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./static/css/magnific-popup.css">
+    <link rel="stylesheet" href="./static/css/jernihin.css">
+    <link rel="shortcut icon" href="./static/img/Jernihin.svg" type="image/x-icon">
 
 </head>
 <body>
@@ -20,7 +21,7 @@
     <!-- Video banner 400 px height -->
     <div id="tm-video-container">
         <video autoplay muted loop id="tm-video">
-            <source src="video/ocean-sea-wave-video.mp4" type="video/mp4">
+            <source src="./static/video/ocean-sea-wave-video.mp4" type="video/mp4">
         </video>  
         <i id="tm-video-control-button" class="fas fa-pause"></i>
     </div>
@@ -109,7 +110,7 @@
             </div> 
         </div>
 
-        <!-- Predic -->
+        <!-- Predict -->
         <div id="about" class="popup mfp-with-anim mfp-hide tm-bg-gray">
             <a href="#" class="tm-close-popup">
                 return home
@@ -307,14 +308,14 @@
     </div>
 
     <footer class="tm-footer">
-        <span>Copyright &copy; 2022 Your Company</span>
-        <span>Web Designed by ... </span>
+        <span>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Jernihin</span>
+        <span>C22-078 SIB Dicoding 3 Capstone Team</span>
     </footer>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>    
-    <script src="js/templatemo-script.js"></script>
+    <script src="./static/js/jquery-3.4.1.min.js"></script>
+    <script src="./static/js/imagesloaded.pkgd.min.js"></script>
+    <script src="./static/js/isotope.pkgd.min.js"></script>
+    <script src="./static/js/jquery.magnific-popup.min.js"></script>
+    <script src="./static/js/templatemo-script.js"></script>
 </body>
 </html>
