--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,30 +74,21 @@
                     <div class="tm-row tm-content-row">
                         <div class="tm-col-6 tm-intro-col-l">
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                Air yang aman dan tersedia sangat penting untuk kesehatan masyarakat, baik itu digunakan untuk minum, keperluan rumah tangga, produksi makanan atau tujuan rekreasi.
                             </p>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                Indeks kualitas air (WQI) merupakan alat penting untuk menentukan kualitas air sebagai indeks yang mencerminkan pengaruh gabungan dari berbagai parameter 
+                                kualitas air yang dipertimbangkan dan diambil untuk perhitungan indeks kualitas air.
                             </p>
                             <p class="tm-mb-0">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                Jadi, kami mengambil beberapa inspirasi untuk menggunakan dataset
+                                Indeks kualitas air (WQI) untuk memahami jenis air minum yang aman dan menerapkan machine learning untuk membedakan antara air Minum dan Air Tidak Minum.
                             </p>
                         </div>
                         <div class="tm-col-6">
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                            </p>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            </p>
-                            <p class="tm-mb-80">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                 Jernih in app adalah aplikasi untuk memprediksi kejernihan air yang dapat memberikan hasil prediksi kualitas air, 
+                                apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi. 
                             </p>
                             <div class="tm-text-center">
                                 <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
