update icon, img src

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,28 +34,28 @@
                 <li class="tm-nav-item">
                     <a href="#intro" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Introduction
-                        <i class="fas fa-3x fa-water"></i>
+                        <i class="fa fa-3x fa-info"></i>
                     </a>                
                 </li>
                 <!-- Popup predic -->
                 <li class="tm-nav-item">
                     <a href="#about" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Prediction
-                        <i class="fas fa-3x fa-tint"></i>
+                        <i class="fa fa-3x fa-tint"></i>
                     </a>
                 </li>
                 <!-- Popup about us -->
                 <li class="tm-nav-item">
                     <a href="#gallery" data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
                         About Us
-                        <i class="far fa-3x fa-images"></i>
+                        <i class="fa fa-3x fa-user"></i>
                     </a>
                 </li>
                 <!-- Popup contact -->
                 <li class="tm-nav-item">
                     <a href="#contact" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Contact
-                        <i class="far fa-3x fa-comments"></i>
+                        <i class="fa fa-3x fa-comments"></i>
                     </a>
                 </li>
             </ul>
@@ -68,7 +68,7 @@
                 <i class="fas fa-times"></i>
             </a>
             <div class="tm-row tm-intro-row">
-                <img src="img/intro.jpg" alt="Image" class="tm-intro-img">
+                <img src="./static/img/intro.jpg" alt="Image" class="tm-intro-img">
                 <div class="tm-col tm-bg-white tm-intro-pad">
                     <h2 class="tm-color-primary tm-page-title">Introducing Jernihin</h2>
                     <div class="tm-row tm-content-row">
@@ -119,7 +119,7 @@
             <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">prediction page</h2>
             <div class="tm-row tm-about-row">
                 <div class="tm-col tm-about-col tm-about-left">                    
-                    <img src="img/about.jpg" alt="Image" class="tm-mb-30">
+                    <img src="./static/img/about.jpg" alt="Image" class="tm-mb-30">
                     <p class="tm-mb-40">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -159,25 +159,25 @@
                 <div class="tm-gallery">
                     <div class="tm-gallery-container">                        
                         <figure class="effect-chico tm-gallery-item portrait">
-                            <img src="img/portrait-01.jpg" alt="Image"/>
+                            <img src="./static/img/portrait-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>							
                             </figcaption>			
                         </figure>
                         <figure class="effect-chico tm-gallery-item nature">
-                            <img src="img/nature-01.jpg" alt="Image"/>
+                            <img src="./static/img/nature-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>							
                             </figcaption>			
                         </figure>
                         <figure class="effect-chico tm-gallery-item animal">
-                            <img src="img/animal-01.jpg" alt="Image"/>
+                            <img src="./static/img/animal-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>							
                             </figcaption>			
                         </figure>
                         <figure class="effect-chico tm-gallery-item building">
-                            <img src="img/building-01.jpg" alt="Image"/>
+                            <img src="./static/img/building-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>							
                             </figcaption>			
