--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Jernihin</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
     <link rel="stylesheet" href="./static/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./static/css/magnific-popup.css">
     <link rel="stylesheet" href="./static/css/jernihin.css">
     <link rel="shortcut icon" href="./static/img/Jernihin.svg" type="image/x-icon">
-
 </head>
 <body>
     <!-- Header -->
@@ -35,7 +36,7 @@
                     <a href="#intro" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Introduction
                         <i class="fa fa-3x fa-info"></i>
-                    </a>                
+                    </a>
                 </li>
                 <!-- Popup predic -->
                 <li class="tm-nav-item">
@@ -91,10 +92,10 @@
                                 <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
                                     Next Page
                                 </a>
-                            </div>                            
+                            </div>
                         </div>
                     </div>
-                </div>                
+                </div>
             </div> 
         </div>
 
@@ -133,7 +134,7 @@
                     <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
                         Our Team
                     </a>
-                </div>               
+                </div>
             </div>
         </div>
 
@@ -145,31 +146,31 @@
             </a>
             <div class="tm-row tm-gallery-row">
                 <div class="tm-gallery">
-                    <div class="tm-gallery-container">                        
+                    <div class="tm-gallery-container">
                         <figure class="effect-chico tm-gallery-item portrait">
                             <img src="./static/img/portrait-01.jpg" alt="Image"/>
                             <figcaption>
-                                <p>..nama..</p>							
-                            </figcaption>			
+                                <p>..nama..</p>
+                            </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item nature">
                             <img src="./static/img/nature-01.jpg" alt="Image"/>
                             <figcaption>
-                                <p>..nama..</p>							
-                            </figcaption>			
+                                <p>..nama..</p>
+                            </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item animal">
                             <img src="./static/img/animal-01.jpg" alt="Image"/>
                             <figcaption>
-                                <p>..nama..</p>							
-                            </figcaption>			
+                                <p>..nama..</p>
+                            </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item building">
                             <img src="./static/img/building-01.jpg" alt="Image"/>
                             <figcaption>
-                                <p>..nama..</p>							
-                            </figcaption>			
-                        </figure>               
+                                <p>..nama..</p>
+                            </figcaption>
+                        </figure>
                     </div>
                 </div>
 
@@ -223,7 +224,7 @@
                     </a>
                 </div>
             </div>
-        </div>   
+        </div>
 
         <!-- Contact -->
         <div id="contact" class="popup mfp-with-anim mfp-hide tm-bg-gray">
@@ -234,19 +235,16 @@
             <h2 class="tm-contact-col tm-color-primary tm-page-title tm-mb-40">Contact Us</h2>
             <div class="tm-row tm-contact-row">
                 <div class="tm-col tm-contact-col">
-                
-
                     <form id="contact-form" action="" method="POST" class="tm-contact-form">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required />
+                            <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required/>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required />
+                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required/>
                         </div>
                         <div class="form-group">
-                            <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required=></textarea>
+                            <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
                         </div>
-
                         <div class="form-group tm-text-right">
                             <button type="submit" class="tm-btn tm-btn-primary">Send it now</button>
                         </div>
