update source folder/file

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <title>Jernihin</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
-    <link rel="stylesheet" href="./static/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="./static/css/magnific-popup.css">
-    <link rel="stylesheet" href="./static/css/jernihin.css">
-    <link rel="shortcut icon" href="./static/img/Jernihin.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/static/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css">
+    <link rel="stylesheet" href="/static/css/jernihin.css">
+    <link rel="shortcut icon" href="/static/img/Jernihin.svg" type="image/x-icon">
 </head>
 <body>
     <!-- Header -->
@@ -22,7 +22,7 @@
     <!-- Video banner 400 px height -->
     <div id="tm-video-container">
         <video autoplay muted loop id="tm-video">
-            <source src="./static/video/ocean-sea-wave-video.mp4" type="video/mp4">
+            <source src="/static/video/ocean-sea-wave-video.mp4" type="video/mp4">
         </video>  
         <i id="tm-video-control-button" class="fas fa-pause"></i>
     </div>
@@ -69,7 +69,7 @@
                 <i class="fas fa-times"></i>
             </a>
             <div class="tm-row tm-intro-row">
-                <img src="./static/img/intro.jpg" alt="Image" class="tm-intro-img">
+                <img src="/static/img/intro.jpg" alt="Image" class="tm-intro-img">
                 <div class="tm-col tm-bg-white tm-intro-pad">
                     <h2 class="tm-color-primary tm-page-title">Introducing Jernihin</h2>
                     <div class="tm-row tm-content-row">
@@ -108,7 +108,7 @@
             <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">prediction page</h2>
             <div class="tm-row tm-about-row">
                 <div class="tm-col tm-about-col tm-about-left">                    
-                    <img src="./static/img/about.jpg" alt="Image" class="tm-mb-30">
+                    <img src="/static/img/about.jpg" alt="Image" class="tm-mb-30">
                     <p class="tm-mb-40">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -148,25 +148,25 @@
                 <div class="tm-gallery">
                     <div class="tm-gallery-container">
                         <figure class="effect-chico tm-gallery-item portrait">
-                            <img src="./static/img/portrait-01.jpg" alt="Image"/>
+                            <img src="/static/img/portrait-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>
                             </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item nature">
-                            <img src="./static/img/nature-01.jpg" alt="Image"/>
+                            <img src="/static/img/nature-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>
                             </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item animal">
-                            <img src="./static/img/animal-01.jpg" alt="Image"/>
+                            <img src="/static/img/animal-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>
                             </figcaption>
                         </figure>
                         <figure class="effect-chico tm-gallery-item building">
-                            <img src="./static/img/building-01.jpg" alt="Image"/>
+                            <img src="/static/img/building-01.jpg" alt="Image"/>
                             <figcaption>
                                 <p>..nama..</p>
                             </figcaption>
@@ -354,10 +354,10 @@
         <span>C22-078 SIB Dicoding 3 Capstone Team</span>
     </footer>
 
-    <script src="./static/js/jquery-3.4.1.min.js"></script>
-    <script src="./static/js/imagesloaded.pkgd.min.js"></script>
-    <script src="./static/js/isotope.pkgd.min.js"></script>
-    <script src="./static/js/jquery.magnific-popup.min.js"></script>
-    <script src="./static/js/templatemo-script.js"></script>
+    <script src="/static/js/jquery-3.4.1.min.js"></script>
+    <script src="/static/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/static/js/isotope.pkgd.min.js"></script>
+    <script src="/static/js/jquery.magnific-popup.min.js"></script>
+    <script src="/static/js/templatemo-script.js"></script>
 </body>
 </html>
