--- a/templates/index.html
+++ b/templates/index.html
@@ -251,40 +251,41 @@
                     </form>
                 </div>
                 <div class="tm-col tm-contact-col tm-contact-col-r">
-                    
+
                     <!-- Map -->
                     <div class="mapouter tm-mb-40">
                         <div class="gmap_canvas">
                             <iframe width="100%" height="520" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2098.243952082923!2d107.63245264839983!3d-6.895763240062077!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb8bb411d2516aad6!2sDicoding%20Academy!5e0!3m2!1sid!2sid!4v1670045754042!5m2!1sid!2sid"
+                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                            </iframe>
                         </div>
                     </div>
 
                     <!-- Address -->
                     <address class="tm-mb-40">
-                        110-220 Nam vel ultricies mauris,<br>
-                        Et gravida eros 10220
+                        Jalan Batik Kumeli No.50, Kel. Sukaluyu, Kec. Cibeunying Kaler<br>
+                        Kota Bandung, Jawa Barat, Indonesia, 40123
                     </address>
 
                     <!-- Links -->
                     <ul class="tm-contact-links">
                         <li>
-                            <a href="tel:0100200340">
+                            <a href="tel:6282127277101">
                                 <i class="fas fa-phone tm-contact-link-icon"></i>
-                                Tel: 010-020-0340
+                                Tel: 62 821-2727-7101
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:info@company.com">
+                            <a href="mailto:c22-078@dicoding.org">
                                 <i class="fas fa-at tm-contact-link-icon"></i>
-                                Email: info@company.com
+                                Email: c22-078@dicoding.org
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.company.com">
+                            <a href="https://jernihin.up.railway.app">
                                 <i class="fas fa-link tm-contact-link-icon"></i>
-                                URL: www.company.com
+                                URL: jernihin.up.railway.app
                             </a>
                         </li>
                     </ul>
